Fixed a bug where "Add/Edit Waste Point" text did not fit onto its button

--- a/ldiw_waste_map_behavior_addpointcontent.css
+++ b/ldiw_waste_map_behavior_addpointcontent.css
@@ -4,12 +4,12 @@
 	float:right;
 	right: 0px;
 	height: 60px; 
-	width: 160px;
+	width: 15em;
 	}
 
 .olControlPanel div { 
 	float:right;
-	width:  160px;
+	width:  15em;
 	height: 24px;
 	line-height: 24px;
 	border-style: solid;
